--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,15 @@
 .container {
-  padding: 0 2rem;
+  padding: 0;
+}
+
+.header {
+  width: 100%;
+  padding: 2rem 4rem;
+  background: black;
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -12,20 +17,51 @@
   align-items: center;
 }
 
-.footer {
-  display: flex;
+.block {
+  width: 100%;
+  padding: 8rem;
   flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer a {
+.blockHero {
+  width: 100%;
+  padding: 0rem 0;
+  flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+}
+
+.heroBg {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.bg-image {
+  background-size: contain;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.footer ul li {
+  margin: 1rem 0;
 }
 
 .title a {
@@ -57,7 +93,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: #191919;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -71,6 +107,17 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+}
+
+.gridRow {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 800px;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 0.75em;
 }
 
 .card {
@@ -88,8 +135,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: blue;
+  border-color: blue;
 }
 
 .card h2 {
