--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,30 @@
+@import url("https://use.typekit.net/icg2yqw.css");
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: white;
+  background: #1B141D;
 }
 
 a {
   color: inherit;
+  color: blue;
   text-decoration: none;
+}
+h1, h2, h3, h4 {
+  font-family: 'Jazzier', serif;
+  font-size: 2em;
+  letter-spacing: 0.1em;
+  color: #F5D90A;
+  font-weight: 300;
+}
+
+a:hover {
+  color: blue;
 }
 
 * {
